3.36 (17 Oct 2002)
- added missing include of ch_extreme_points_2.h in ch_jarvis.C

3.35 (12 Aug 2002)

- replaced LEFTTURN and relatives with LEFT_TURN and relatives.

%%%%%%%%%%%%%%%%%%%%%%   R e l e a s e  2 . 4   %%%%%%%%%%%%%%%%%%%%%%%%%%%%

3.34 (20 Mar 2001)
- added the examples/include/ch_timing_2.[Ch] files back.  Some problem with
  CVS there...

3.33 (19 Mar 2001)
- moved the leda_in_CGAL.h and rat_leda_in_CGAL.h files to the LEDA package.

3.32 (7 Mar 2002)
- changed std:: to CGAL_CLIB_STD:: for atoi and exit in example

3.31 (20 Feb 2002)
- fixed documentation bug (removed mention of Left_of_line_2)

3.30 (1 Feb 2002)
- fixed?  CVS problems in examples directory

3.29 (28 Jan 2002)
- fixed remaining problems with ch_function_objects.h

3.28 (24 Jan 2002)
- moved functor specific to convex hull from kernel to here
- function objects in leda traits classes now come from CGALi

3.27 (11 Dec 2001)

- added #include <CGAL/stl_extensions.h> into segment_intersection_points_2.h.
- added std:: to atoi and exit in example

3.26 (05 Dec 2001)
- Replaced all uses of ch_value_type with iterator_traits and Kernel_traits.
  Deleted include/CGAL/ch_value_type.h.
- Removed inclusion of and deleted file gnu_istream_iterator_value_type_fix.h.
- Removed the use of include/CGAL/ch_utils.h from all files and removed it.
- Removed the dependancy of include/CGAL/Kernel/Traits_aids.h.
- Added ch_melkman.h. So far, only ch_melkman.C existed and was used for
  inclusion.
- Moved include/CGAL/ch_timing_2.[hC] to examples/Convex_hull_2/include/CGAL
  only.
- Reformatting and cleanup of include/CGAL/ files.

3.25    (3 Oct 2001)
- put back ch_postcondition_code macro around the save_first assignment

3.24    (21 Sep 2001)
- changed ch__e_point to ch_e_point (typo)

3.23    (13 Sep 2001)
- changed to use of configuration flag instead of OS/compiler flags

3.22    (13 Sep 2001)
- added value_type fixes for SUNPRO compiler
