@@ -36,6 +36,7 @@
 #include <CGAL/ch_assertions.h>
 #include <CGAL/ch_selected_extreme_points_2.h>
 #include <CGAL/functional.h>
+#include <CGAL/ch_selected_extreme_points_2.h>
 #include <algorithm>
 
 
